# goober

./: Cargo.toml  README.org  contributing.md  example.rs  flake.nix
examples/: bingo.rs  counter.rs  hello_world.rs  stack.rs
runner/: Cargo.toml
runner/src/: lib.rs  main.rs  parse.rs  renderer.rs  window.rs
runtime/: Cargo.toml
runtime/benches/: deep_update.rs  fan_out.rs  narrow_down.rs
runtime/src/: callback.rs  effect.rs  hydration.rs  lib.rs  memo.rs  oco.rs  resource.rs  runtime.rs  selector.rs  serde.rs  signal.rs  signal_wrappers_read.rs  signal_wrappers_write.rs  slice.rs  spawn.rs  spawn_microtask.rs  suspense.rs  watch.rs
runtime/tests/: cleanup.rs  context.rs  effect.rs  memo.rs  resource.rs  untracked.rs  watch.rs
src/: lib.rs
ui/: Cargo.toml
ui/src/: alignment.rs  arrangement.rs  button.rs  canvas.rs  foundation.rs  lib.rs  modifier.rs  render.rs  sk.rs  stacking.rs  terminal.rs  text.rs  unit.rs
ui/src/foundation/: alignment.rs  arrangement.rs  stack.rs  text.rs
ui/src/modifier/: builtin.rs
