[workspace]
members = ["runtime", "ui", "runner", "."]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "sync", "time"] }
taffy = "0.3.18"
derive_more = "0.99.17"
cfg-if = "1"

[workspace.package]
version = "0.1.0"

[package]
name = "goober"
edition = "2021"
version.workspace = true

[dependencies]
goober-ui.path = "ui"
goober-runner.path = "runner"
goober-runtime.path = "runtime"

[dev-dependencies]
goober.path = "."

[features]
nightly = ["goober-runtime/nightly", "goober-runner/nightly"]
skia = ["goober-ui/skia", "goober-runner/skia"]
terminal = ["goober-ui/terminal", "goober-runner/terminal"]
default = ["skia"]
